--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -105,7 +105,7 @@
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="32dp"
         android:background="@color/white"
-        android:text="Sign Up"
+        android:text="Sign In"
         android:textColor="#43A047"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
