--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -117,7 +117,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Already Registered? Sign In!"
+        android:text="Not Registered? Sign Up!"
         android:textColor="@android:color/white"
         android:textStyle="bold"
         android:textSize="14sp"
