--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -74,4 +74,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp" />
 
+    <!-- Go to Expense Page Button - Now at bottom -->
+    <Button
+        android:id="@+id/buttonGoToExpense"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Go to Expense Page"
+        android:backgroundTint="#2196F3"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/buttonBackToHome" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
