--- a/app/src/main/res/layout/expense_list_item.xml
+++ b/app/src/main/res/layout/expense_list_item.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <!-- ImageView for Expense Image -->
     <ImageView
         android:id="@+id/expenseImage"
         android:layout_width="60dp"
@@ -13,6 +14,7 @@
         android:contentDescription="Expense image"
         android:src="@drawable/ic_launcher_foreground" />
 
+    <!-- Vertical layout for description, amount, and date -->
     <LinearLayout
         android:orientation="vertical"
         android:layout_marginStart="10dp"
@@ -39,4 +41,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
+
+    <!-- Delete Button -->
+    <Button
+        android:id="@+id/deleteButton"
+        android:text="Delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical" />
+
 </LinearLayout>
