--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="24dp"
-    android:background="#FAFAFA"
+    android:background="#BA99D9"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/textViewWelcome"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Welcome!"
-        android:textSize="22sp"
+        android:text="Welcome! Ready to save?"
+        android:textSize="30sp"
         android:textStyle="bold"
         android:textColor="#333333"
         android:gravity="center"
@@ -28,25 +28,26 @@
         android:id="@+id/buttonLogout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Log Out"
+        android:layout_marginTop="24dp"
         android:backgroundTint="#FF5252"
-        android:textColor="#FFFFFF"
         android:elevation="4dp"
-        app:layout_constraintTop_toBottomOf="@id/textViewWelcome"
+        android:text="Log Out"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="24dp" />
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textViewWelcome" />
 
     <Button
         android:id="@+id/buttonManageCategories"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:text="Manage Categories"
-        app:layout_constraintTop_toBottomOf="@id/buttonLogout"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/buttonLogout" />
 
     <Button
         android:id="@+id/buttonSetGoals"
