--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/green"
+    android:background="#B4A6D1"
     tools:context=".SignUpActivity">
 
     <!-- Welcome Text -->
@@ -13,7 +13,7 @@
         android:id="@+id/welcomeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome,\nSign up to continue"
+        android:text="Welcome to BestBudget,\nSign up to continue"
         android:textSize="28sp"
         android:textColor="@android:color/black"
         android:textStyle="bold"
@@ -33,8 +33,8 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="40dp"
-        app:boxStrokeColor="@color/green"
-        app:hintTextColor="@color/green"
+        app:boxStrokeColor="@color/black"
+        app:hintTextColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/welcomeText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -58,8 +58,8 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="24dp"
-        app:boxStrokeColor="@color/green"
-        app:hintTextColor="@color/green"
+        app:boxStrokeColor="@color/hint_gray"
+        app:hintTextColor="@color/black"
         app:passwordToggleEnabled="true"
         app:layout_constraintTop_toBottomOf="@id/emailLayout"
         app:layout_constraintStart_toStartOf="parent"
@@ -84,8 +84,8 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="24dp"
-        app:boxStrokeColor="@color/green"
-        app:hintTextColor="@color/green"
+        app:boxStrokeColor="#000000"
+        app:hintTextColor="@color/black"
         app:passwordToggleEnabled="true"
         app:layout_constraintTop_toBottomOf="@id/passwordLayout"
         app:layout_constraintStart_toStartOf="parent"
@@ -112,7 +112,7 @@
         android:layout_marginHorizontal="16dp"
         android:background="@color/white"
         android:text="Sign Up"
-        android:textColor="#43A047"
+        android:textColor="#030403"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/confirmPasswordLayout"
         app:layout_constraintStart_toStartOf="parent"
