Updated the UI for the expense Activity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="hint_gray">#A9A9A9</color>
+    <color name="purple_700">#3700B3</color>
+
 </resources>
